k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: petshop-apps
spec:
  replicas: 5
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: petshop-auth-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: jwt-keys
              mountPath: /etc/jwt
              readOnly: true
      volumes:
        - name: jwt-keys
          secret:
            secretName: jwt-secret
