k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: petshop-apps
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
